--- a/www/styles/styles.css
+++ b/www/styles/styles.css
@@ -19,6 +19,11 @@
     --cmd-color: #f9f9f9;
     --toggle-color: #f9f9f9;
     --toggle-on-color: #2b8949;
+    --status-idle-color: #2b8949;
+    --status-error-color: #cb5353;
+    --status-maintenance-color: #6036b9;
+    --status-busy-autotest-color: #de7c31;
+    --status-busy-manual-color: #de7c31;
 }
 
 * {
@@ -59,6 +64,10 @@ input, button {
 /* Misc */
 .hidden {
     display: none !important;
+}
+
+.spacer {
+    flex: 1;
 }
 
 
@@ -255,7 +264,6 @@ input, button {
         border-bottom: none;
         display: flex;
         user-select: none;
-        justify-content: space-between;
     }
 
     .console__body {
@@ -349,6 +357,65 @@ input, button {
 }
 
 
+/* Statusbar */
+.statusbar {
+    display: flex;
+    align-items: center;
+}
+
+    .statusbar__status {
+      font-size: 1.75rem;
+      font-weight: 500;
+      text-transform: uppercase;
+      line-height: 2.2rem;
+      height: 2rem;
+      overflow: hidden;
+      padding: 0 4px;
+      color: rgba(0,0,0,.8);
+      margin-right: 10px;
+    }
+
+    .status--idle {
+        background-color: var(--status-idle-color);
+    }
+
+    .status--error {
+        background-color: var(--status-error-color);
+    }
+
+    .status--error .statusbar__status__full span {
+      text-transform: lowercase;
+      position: relative;
+      top: -2px;
+      font-size: 1.7rem;
+    }
+
+    .status--maintenance {
+        background-color: var(--status-maintenance-color);
+    }
+
+    .status--busy-autotest {
+        background-color: var(--status-busy-autotest-color);
+    }
+    
+    .status--busy-manual {
+        background-color: var(--status-busy-manual-color);
+    }
+
+        .statusbar__status__full {
+            display: block;
+        }
+
+        .statusbar__status__short {
+            display: none;
+        }
+
+/*    .status__title {
+      color: #f9f9f9;
+      font-size: 1.75rem;
+      font-weight: 500;
+    }*/
+
 
 /* Toggles */
 .toggles {
@@ -413,7 +480,6 @@ input, button {
             background-color: var(--toggle-color);
             display: none;
         }
-
 
 
 /* Filters */
@@ -678,6 +744,25 @@ input, button {
         #filter-input:not(:checked) ~ .console__actionbar .label--input {
             color: #fff;
             opacity: .25;
+        }
+
+    .statusbar {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+
+        .statusbar__status {
+            padding: 0;
+            min-width: 2rem;
+            text-align: center;
+        }
+
+        .statusbar__status__full {
+            display: none;
+        }
+
+        .statusbar__status__short {
+            display: block;
         }
 }
 
